<resources>
    <string name="app_name">KinoPoisk</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="title_movie">Movie</string>
    <string name="contentDescription">Failed to load img</string>
    <string name="textNameMovie">Name movie</string>
    <string name="textYearMovie">Year movie</string>
    <string name="textRatingMovie">Rating movie</string>
    <string name="textGenreMovie">Genre movie</string>
    <string name="titleUnwatched">Буду смотреть</string>
    <string name="titleWatched">Просмотренные</string>
    <string name="titleRated">Оцененные</string>
    <string name="textScrollView">It scroll view</string>
    <string name="textCount">0</string>
    <string name="textRate">Оценить</string>
    <string name="textRated">Оценено</string>
    <string name="textWillWatch">Буду смотреть</string>
    <string name="textUnwatched">Не просмотрено</string>
    <string name="textWatched">Просмотрено</string>
    <string name="textSlogan">Слоган</string>
    <string name="textDescription">Описание</string>
    <string name="textRating">Рейтинг</string>
    <string name="textRelease">Последние релизы</string>
    <string name="textBtnMore">Еще</string>
    <string name="textRateMovie">Оцените фильм</string>
    <string name="textWriteReview">Напишите отзыв</string>
    <string name="textDelRev">Удалить отзыв</string>
    <string name="textAddRev">Добавить отзыв</string>
    <string name="textUpRev">Обновить отзыв</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>